--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
-<?php
-require_once('mobile_device_detect.php');
-mobile_device_detect(true,true,true,true,true,true,true,false,false);
-?>
 <!DOCTYPE html>
 <html>
 <head>
   <tittle>kfato</tittle>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 <body>
