--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </ul>
 
 <div style="padding-left:16px">
-  <h2>Responsive Topnav Example</h2>
+  <h2>Responsive home page</h2>
   <p>Resize the browser window to see how it works.</p>
    <p>Resize the browser window to see how it works.</p>
     <p>Resize the browser window to see how it works.</p>
