--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>kfato</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <script src='https://use.fontawesome.com/ab4ab23ebb.js'></script>
 </head>
 <body>
 <header>
@@ -46,6 +47,15 @@
                         <p>Resize the browser window to see how it works.</p>
   
 </div>
+  
+  <div class='social_share_buttons'>
+	<a class='social_link' href='https://www.facebook.com/sharer.php?u=' id='facebook_link_share' onclick='myfunction()' target='_blank'><i aria-hidden='true' class='fa fa-facebook'/> Share</a>
+	<a class='social_link' href='https://twitter.com/share?url=' id='twitter_link_share' onclick='myfunction()' target='_blank'><i aria-hidden='true' class='fa fa-twitter'/> share</a>
+	<a class='social_link' href='https://www.reddit.com/submit?url=' id='google_plus_link_share' onclick='myfunction()' target='_blank'><i aria-hidden='true' class='fa fa-google-plus'/> share</a>
+	<a class='social_link' href='https://www.linkedin.com/shareArticle?url=' id='linkedin_link_share' onclick='myfunction()' target='_blank'><i aria-hidden='true' class='fa fa-linkedin'/> share</a>
+	<a class='social_link' href='https://www.reddit.com/submit?url=' id='reddit_link_share' onclick='myfunction()' target='_blank'><i aria-hidden='true' class='fa fa-reddit'/> share</a>
+</div>
+
 <footer>kfat0</footer>
 <script>
 function myFunction() {
