--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
   
   <div class='social_share_buttons'>
 	<a class='social_link' href='https://www.facebook.com/sharer.php?u=' id='facebook_link_share' onclick='myfunction()' target='_blank'><i aria-hidden='true' class='fa fa-facebook'></i> Share</a>
-	<a class='social_link' href='https://twitter.com/share?url=' id='twitter_link_share' onclick='myfunction()' target='_blank'><i aria-hidden='true' class='fa fa-twitter'/> share</a>
-	<a class='social_link' href='https://www.reddit.com/submit?url=' id='google_plus_link_share' onclick='myfunction()' target='_blank'><i aria-hidden='true' class='fa fa-google-plus'/> share</a>
-	<a class='social_link' href='https://www.linkedin.com/shareArticle?url=' id='linkedin_link_share' onclick='myfunction()' target='_blank'><i aria-hidden='true' class='fa fa-linkedin'/> share</a>
-	<a class='social_link' href='https://www.reddit.com/submit?url=' id='reddit_link_share' onclick='myfunction()' target='_blank'><i aria-hidden='true' class='fa fa-reddit'/> share</a>
+	<a class='social_link' href='https://twitter.com/share?url=' id='twitter_link_share' onclick='myfunction()' target='_blank'><i aria-hidden='true' class='fa fa-twitter'></i> share</a>
+	<a class='social_link' href='https://www.reddit.com/submit?url=' id='google_plus_link_share' onclick='myfunction()' target='_blank'><i aria-hidden='true' class='fa fa-google-plus'></i> share</a>
+	<a class='social_link' href='https://www.linkedin.com/shareArticle?url=' id='linkedin_link_share' onclick='myfunction()' target='_blank'><i aria-hidden='true' class='fa fa-linkedin'></i> share</a>
+	<a class='social_link' href='https://www.reddit.com/submit?url=' id='reddit_link_share' onclick='myfunction()' target='_blank'><i aria-hidden='true' class='fa fa-reddit'></i> share</a>
 </div>
 
 <footer>kfat0</footer>
