--- a/index.html
+++ b/index.html
@@ -21,31 +21,141 @@
 </ul>
 
 <div style="padding-left:16px">
-  <h2>Responsive home page</h2>
-  <p>Resize the browser window to see how it works.</p>
-   <p>Resize the browser window to see how it works.</p>
-    <p>Resize the browser window to see how it works.</p>
-     <p>Resize the browser window to see how it works.</p>
-      <p>Resize the browser window to see how it works.</p>
-       <p>Resize the browser window to see how it works.</p>
-        <p>Resize the browser window to see how it works.</p>
-         <p>Resize the browser window to see how it works.</p>
-          <p>Resize the browser window to see how it works.</p>
-           <p>Resize the browser window to see how it works.</p>
-            <p>Resize the browser window to see how it works.</p>
-             <p>Resize the browser window to see how it works.</p>
-              <p>Resize the browser window to see how it works.</p>
-               <p>Resize the browser window to see how it works.</p>
-                <p>Resize the browser window to see how it works.</p>
-                 <p>Resize the browser window to see how it works.</p>
-                  <p>Resize the browser window to see how it works.</p>
-                   <p>Resize the browser window to see how it works.</p>
-                    <p>Resize the browser window to see how it works.</p>
-                     <p>Resize the browser window to see how it works.</p>
-                      <p>Resize the browser window to see how it works.</p>
-                       <p>Resize the browser window to see how it works.</p>
-                        <p>Resize the browser window to see how it works.</p>
+ ExNo:1                             <h3>Program to obtain the information about the [A]Host [B]Network  </h3>                                                                             [C]Protocols [D]Domains
+
+
+CODING:
+import java.lang.*;
+import java.io.*;
+import java.net.*;
+class udl{
+public static void main(String args[])throws MalformedURLException{
+URL url=new URL("http://www.yahoo.com");
+try{
+System.out.println("Host name is"+url.getHost());
+System.out.println("Port no is"+url.getPort());
+System.out.println("Protocol used is"+url.getProtocol());
+}
+catch(Exception e)
+{
+System.out.println("Error="+e);
+}
+}
+}
+
+
+
+OUTPUT:
+Host name is www.yahoo.com
+Port no is -1
+Protocol used is http
   
+	
+	<h3>Ex:No:2                                             Demonstrate program to manipulate the IP Address</h3>
+
+CODING:
+import java.util.*;
+import java.lang.*;
+import java.net.*;
+public class getOwnIP{
+public static void main(String args[])throws UnknownHostException{
+try{
+InetAddress IPO=InetAddress.getLocalHost();
+System.out.println("IP of the system="+IPO.getHostAddress());
+System.out.println("Canonical Hostname="+IPO.getCanonicalHostName());
+System.out.println("Hostname ="+IPO.getHostName());
+System.out.println("AllByName="+IPO.getAllByName(IPO.getHostName()));
+System.out.println("Loopback Address="+IPO.getLoopbackAddress());
+System.out.println("Address="+IPO.getAddress());
+System.out.println("isAnyLocal Address="+IPO.isAnyLocalAddress());
+System.out.println("isMulticast Address="+IPO.isMulticastAddress());
+}
+catch(Exception e)
+{
+System.out.println("Exception caught="+e.getMessage());
+}
+}
+}
+
+	
+	<h3>ExNo:7                                                    Analyze a program to write a Telnet Client</h3>
+
+
+
+
+Coding:
+Server:
+import java.lang.*;
+import java.io.*;
+import java.net.*;
+class Telnetserver{
+public static void main(String args[]){
+String data="Hello Client!!";
+try{
+ServerSocket srvr=new ServerSocket(8088);
+Socket skt=srvr.accept();
+System.out.println("Client Connected!");
+PrintWriter out=new PrintWriter(skt.getOutputStream(),true);
+DataInputStream din=new DataInputStream(skt.getInputStream());
+if(din.readUTF().equals("1")){
+System.out.println("String:"+data);
+out.print(data);
+}
+out.close();
+skt.close();
+srvr.close();
+din.close();
+}
+catch(Exception e){
+System.out.println(e);
+}
+}
+}
+
+Client:
+import java.net.*;
+import java.io.*;
+class Telnetclient{
+public static void main(String args[])throws Exception{
+Socket soc=new Socket("localhost",8088);
+String Command;
+DataInputStream din=new DataInputStream(soc.getInputStream());
+DataOutputStream dout=new DataOutputStream(soc.getOutputStream());
+BufferedReader br=new BufferedReader(new InputStreamReader(System.in));
+System.out.println("Welcome to Telnet Client");
+System.out.println("<Telnet prompt>");
+Command=br.readLine();
+dout.writeUTF(Command);
+System.out.println(din.readLine());
+soc.close();
+din.close();
+dout.close();
+br.close();
+}}
+OUTPUT:
+Server:
+javac TelnetServer.java
+java TelnetServer
+Clinet Connected!
+String:Hello Client!!
+
+Client:
+javac TelnetClient.java
+java TelnetClient
+Welcome to Telnet Client
+
+1
+Hello Client!!
+
+OUTPUT:
+IP of the system=192.168.100.120
+Canonical Hostname=CCIII-20.SNSTECHIT.com
+Hostname=CCIII-20
+AllByName=[Ljava.net.InetAddress;@42e816
+Loopback Address=localhost/127.0.0.1
+Address=[B@9304b1
+Is AnyLocal Address=false
+Is Multicast Address=false
 </div>
   
   <div class='social_share_buttons'>
