--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
 </ul>
 
 <div style="padding-left:16px">
- ExNo:1                             <h3>Program to obtain the information about the [A]Host [B]Network  </h3>                                                                             [C]Protocols [D]Domains
+	
+ ExNo:1                             <h3>Program to obtain the information about the [A]Host [B]Network  </h3>   <br>                                                                          [C]Protocols [D]Domains
 
-
+<pre>
 CODING:
 import java.lang.*;
 import java.io.*;
@@ -49,10 +50,10 @@ OUTPUT:
 Host name is www.yahoo.com
 Port no is -1
 Protocol used is http
-  
+  </pre>
 	
 	<h3>Ex:No:2                                             Demonstrate program to manipulate the IP Address</h3>
-
+<pre>
 CODING:
 import java.util.*;
 import java.lang.*;
@@ -76,13 +77,13 @@ System.out.println("Exception caught="+e.getMessage());
 }
 }
 }
-
+</pre>
 	
 	<h3>ExNo:7                                                    Analyze a program to write a Telnet Client</h3>
 
 
 
-
+<pre>
 Coding:
 Server:
 import java.lang.*;
@@ -155,7 +156,8 @@ AllByName=[Ljava.net.InetAddress;@42e816
 Loopback Address=localhost/127.0.0.1
 Address=[B@9304b1
 Is AnyLocal Address=false
-Is Multicast Address=false
+Is Multicast Address=false</pre>
+
 </div>
   
   <div class='social_share_buttons'>
