--- a/index.html
+++ b/index.html
@@ -80,11 +80,7 @@ System.out.println("Exception caught="+e.getMessage());
 </pre>
 	
 	<h3>ExNo:7                                                    Analyze a program to write a Telnet Client</h3>
-
-
-
-<pre>
-Coding:
+<code>
 Server:
 import java.lang.*;
 import java.io.*;
@@ -113,50 +109,10 @@ System.out.println(e);
 }
 }
 
-Client:
-import java.net.*;
-import java.io.*;
-class Telnetclient{
-public static void main(String args[])throws Exception{
-Socket soc=new Socket("localhost",8088);
-String Command;
-DataInputStream din=new DataInputStream(soc.getInputStream());
-DataOutputStream dout=new DataOutputStream(soc.getOutputStream());
-BufferedReader br=new BufferedReader(new InputStreamReader(System.in));
-System.out.println("Welcome to Telnet Client");
-System.out.println("<Telnet prompt>");
-Command=br.readLine();
-dout.writeUTF(Command);
-System.out.println(din.readLine());
-soc.close();
-din.close();
-dout.close();
-br.close();
-}}
-OUTPUT:
-Server:
-javac TelnetServer.java
-java TelnetServer
-Clinet Connected!
-String:Hello Client!!
 
-Client:
-javac TelnetClient.java
-java TelnetClient
-Welcome to Telnet Client
 
-1
-Hello Client!!
+</code>
 
-OUTPUT:
-IP of the system=192.168.100.120
-Canonical Hostname=CCIII-20.SNSTECHIT.com
-Hostname=CCIII-20
-AllByName=[Ljava.net.InetAddress;@42e816
-Loopback Address=localhost/127.0.0.1
-Address=[B@9304b1
-Is AnyLocal Address=false
-Is Multicast Address=false</pre>
 
 </div>
   
