--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <div style="padding-left:16px">
 	
- ExNo:1                             <h3>Program to obtain the information about the [A]Host [B]Network  </h3>   <br>                                                                          [C]Protocols [D]Domains
+ <h1>ExNo:1 </h1>                            <h3>Program to obtain the information about the [A]Host [B]Network  </h3>   <br>                                                                          [C]Protocols [D]Domains
 
 <pre>
 CODING:
