--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@ try{
 System.out.println("Host name is"+url.getHost());
 System.out.println("Port no is"+url.getPort());
 System.out.println("Protocol used is"+url.getProtocol());
+System.out.println("Protocol used is"+url.get());
+
+
 }
 catch(Exception e)
 {
